--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
+    "react-use": "^17.5.1",
     "sweetalert2": "^11.12.4"
   },
   "devDependencies": {
