--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.1",
     "pg": "^8.12.0"
   },
   "scripts": {
