Add product controller, model, routing, sql queries

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,4 @@ DB_HOST='localhost'
 DB_DATABASE='beatton'
 DB_PASSWORD='berry'
 DB_PORT='5432'
+DATABASE_URL="postgresql://postgres:berry@localhost:5432/beatton?schema=public"
