--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0"
   },
   "scripts": {
@@ -12,9 +13,6 @@
     "start": "node server.mjs"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "eslint": "^9.9.1",
-    "globals": "^15.9.0",
     "nodemon": "^3.1.4"
   },
   "name": "server",
